--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "valarray": "cpp",
         "sstream": "cpp",
         "codecvt": "cpp",
-        "limits": "cpp"
+        "limits": "cpp",
+        "xstring": "cpp"
     }
 }
