:construction: Genre Finished, Film Partially Finished

--- a/src/makefile
+++ b/src/makefile
@@ -7,18 +7,23 @@
 
 
 #Repertoire de tout les .o (Parfois en fichier Cacher)
-*.o = $(bin)/Film.o
+*.o = $(bin)/Film.o $(bin)/Genre.o
 bin = ./obj
 LibFilm = ./Film
+LibGenre = ./Film/Genre
 
 #Application Final:
 App:	main.cpp $(*.o)
 		echo Creation de App.app
 		g++ main.cpp $(*.o) -o App.app
 
-$(bin)/Film.o:	$(LibFilm)/film.cpp $(LibFilm)/film.h
-		echo Creation de film.o
+$(bin)/Film.o:	$(LibFilm)/film.cpp $(LibFilm)/film.hpp
+		echo Creation de Film.o
 		g++ $(LibFilm)/film.cpp -c -o $(bin)/Film.o
+
+$(bin)/Genre.o:	$(LibGenre)/genre.cpp $(LibGenre)/genre.hpp
+		echo Creation de Genre.o
+		g++ $(LibGenre)/genre.cpp -c -o $(bin)/Genre.o
 
 #Clean/Clear des .o et de l'application
 clean:	
