:sparkles: Actor Management. Class Completed

--- a/src/makefile
+++ b/src/makefile
@@ -4,18 +4,22 @@
 .SILENT:
 
 #Librairie a compiler pour l'app final
-
-
-#Repertoire de tout les .o (Parfois en fichier Cacher)
-*.o = $(bin)/Film.o $(bin)/Genre.o
-bin = ./obj
 LibFilm = ./Film
 LibGenre = ./Film/Genre
+LibDirector = ./Film/Director
+LibUtility = ./UtilityLib
+LibActor = ./Film/Actor
+
+AppName = DataminedToXML
+
+#Repertoire de tout les .o (Parfois en fichier Cacher)
+*.o = $(bin)/UtilityLib.o $(bin)/Film.o $(bin)/Director.o $(bin)/Genre.o $(bin)/Actor.o
+bin = ./obj
 
 #Application Final:
-App:	main.cpp $(*.o)
-		echo Creation de App.app
-		g++ main.cpp $(*.o) -o App.app
+$(AppName):	main.cpp $(*.o)
+		echo Creation de $(AppName).app
+		g++ main.cpp $(*.o) -o $(AppName).app
 
 $(bin)/Film.o:	$(LibFilm)/film.cpp $(LibFilm)/film.hpp
 		echo Creation de Film.o
@@ -25,13 +29,25 @@ $(bin)/Genre.o:	$(LibGenre)/genre.cpp $(LibGenre)/genre.hpp
 		echo Creation de Genre.o
 		g++ $(LibGenre)/genre.cpp -c -o $(bin)/Genre.o
 
+$(bin)/Director.o:	$(LibDirector)/director.cpp $(LibDirector)/director.hpp
+		echo Creation de Director.o
+		g++ $(LibDirector)/director.cpp -c -o $(bin)/Director.o
+
+$(bin)/Actor.o:	$(LibActor)/actor.cpp $(LibActor)/actor.hpp
+		echo Creation de Actor.o
+		g++ $(LibActor)/actor.cpp -c -o $(bin)/Actor.o
+
+$(bin)/UtilityLib.o:	$(LibUtility)/utilitylib.cpp $(LibUtility)/utilitylib.hpp
+		echo Creation de UtilityLib.o
+		g++ $(LibUtility)/utilitylib.cpp -c -o $(bin)/UtilityLib.o
+
 #Clean/Clear des .o et de l'application
 clean:	
 		rm $(*.o)
-		rm ApplicHoraire.app
+		rm $(AppName).app
 		clear
 
 clear:	
 		rm $(*.o)
-		rm ApplicHoraire.app
+		rm $(AppName).app
 		clear
